# FootyPredict

./: .env.example  .gitignore  README.md  footypredict-infographic.html  pyproject.toml
alembic/: alembic.ini  env.py
src/predictor/: config.py  scheduler.py  seed.py
src/predictor/api/: app.py  deps.py
src/predictor/api/routes/: admin.py  leagues.py  predictions.py
src/predictor/data/: base.py  fa_fulltime_scraper.py  football_data_org.py  importer.py
src/predictor/db/: models.py  session.py
src/predictor/db/repos/: match.py  prediction.py  team.py
src/predictor/engine/: completeness.py  dixon_coles.py  elo.py  fixture_prediction.py  head_to_head.py  pipeline.py  poisson.py  significance.py  simulator.py  standings.py  team_season.py  zones.py
src/predictor/static/css/: app.css
src/predictor/static/js/: charts.js
src/predictor/web/: routes.py
src/predictor/web/templates/: base.html  index.html  league.html  team.html
src/predictor/web/templates/admin/: import.html
src/predictor/web/templates/partials/: confidence_chart.html  fixture_card.html  prediction_table.html  standings_table.html
tests/: conftest.py
tests/test_api/: test_admin.py  test_predictions.py  test_scenario.py
tests/test_data/: test_fa_fulltime_scraper.py  test_football_data_org.py
tests/test_engine/: test_completeness.py  test_dixon_coles.py  test_elo.py  test_fixture_prediction.py  test_head_to_head.py  test_poisson.py  test_significance.py  test_simulator.py  test_standings.py  test_team_season.py  test_zones.py
tests/test_web/: test_routes.py
